# slackrs

./: .gitignore  Cargo.toml  README.md
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: rust.yml
examples/: single_task.rs
src/: lib.rs  main.rs  plot.rs  slack.rs
tests/resources/: plot_tasks.json
tests/resources/sample_export/sample-export/sample-channel/: 2025-01-01.json
