[package]
name = "slackrs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
lazy_static = "1.5.0"
plotters = "0.3.7"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = "4.3.0"
regex = "1.11.1"
csv = "1.3.1"

[[bin]]
name = "slackrs"
path = "src/main.rs"
