[package]
name = "slackrs"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["chatops", "slack", "log-analysis", "plotting"]
categories = ["command-line-utilities", "visualization"]
description = "Provides a CLI and library functions to analyze Slack message data exports (zipped JSONs with a Slack-specific structure) and plot statistics."
homepage = "https://github.com/roland-ewald/slackrs"
repository = "https://github.com/roland-ewald/slackrs"
readme = "README.md"


[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
csv = "1.3.1"
lazy_static = "1.5.0"
plotters = "0.3.7"
rand = "0.8.5"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = "4.3.0"

[[bin]]
name = "slackrs"
path = "src/main.rs"
